# numerals-example

./: .gitignore  README.md  ex.cabal  numerals-example.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
