name:                numerals-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ex#readme
license:             BSD3
license-file:        LICENSE
author:              Mike Thomas
maintainer:          mjt464@gmail.com
copyright:           2017 Mike Thomas
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , numerals >= 0.4.1
                      , text >= 1.2.2.1
  default-language:    Haskell2010

executable ex-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , numerals-example
  default-language:    Haskell2010

test-suite ex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ex
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:autcrock/numerals-example.git
